2011-10-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-rfn-eshadow-update-overlay): Ignore errors.  Let
	`file-name-handler-alist' be nil, the local file name part could
	look remotely (for example on VMS).  (Bug#6019, Bug#9315)
	(tramp-do-copy-or-rename-file-out-of-band): Use
	`tramp-file-name-real-host' for `tramp-current-host'.
	(tramp-process-actions): Set "first-password-request" property for
	the correct connection in case of multihops.

2011-08-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-open-connection-setup-interactive-shell)
	(tramp-open-shell): Use `tramp-shell-quote-argument'.

2011-04-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-process-actions): Add POS argument.  Delete
	region between POS and (pos).
	(tramp-do-copy-or-rename-file-out-of-band): Use `nil' position in
	`tramp-process-actions' call.
	(tramp-maybe-open-connection): Call `tramp-process-actions' with pos.

	* tramp-smb.el (tramp-smb-maybe-open-connection): Use `nil'
	position in `tramp-process-actions' call.

2011-03-12  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.20 released.

	* tramp.el (tramp-progress-reporter-update): Use
	`tramp-compat-funcall'.
	(tramp-handle-start-file-process): Use `tramp-compat-process-get'.
	(tramp-handle-insert-file-contents): Make `file-remote-p' call
	compatible.
	(tramp-open-connection-setup-interactive-shell): Use
	`tramp-compat-process-put'.

	* tramp-compat.el (tramp-compat-process-get)
	(tramp-compat-process-put): New defuns.

2011-02-22  Glenn Morris  <rgm@gnu.org>

	* tramp-gvfs.el: Fix spelling of "precede".

2011-01-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-default-method): Initialize with pscp/plink only
	when running under W32.
	(tramp-find-inline-compress, tramp-get-inline-coding): Quote
	command after pipe symbol for local calls under W32.  (Bug#6784)

2010-12-31  Michael Albinus  <michael.albinus@gmx.de>
