@@ -1,3 +1,10 @@
+2011-11-16  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-handle-file-truename): Cache only the local file name.
+
+	* tramp-cache.el (tramp-flush-file-property): Flush also
+	properties of linked files.  (Bug#9879)
+
 2011-10-12  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-rfn-eshadow-update-overlay): Ignore errors.  Let
